// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`find all latest questions 1`] = `
{
  "data": [
    {
      "accepted_answer_id": null,
      "category_id": "cinema-category",
      "created_at": 2011-11-11T00:00:00.000Z,
      "id": "best-film-2011",
      "owner_id": "douglas_student_id",
      "title": "Quel est le meilleur film de 2011 ?",
      "updated_at": 2011-11-11T00:00:00.000Z,
    },
    {
      "accepted_answer_id": null,
      "category_id": "cinema-category",
      "created_at": 2011-11-10T00:00:00.000Z,
      "id": "popular-film-2011",
      "owner_id": "douglas_student_id",
      "title": "Quel est le film le plus populaire de 2011 ?",
      "updated_at": 2011-11-10T00:00:00.000Z,
    },
    {
      "accepted_answer_id": null,
      "category_id": "cinema-category",
      "created_at": 2011-11-10T00:00:00.000Z,
      "id": "best-actor-2011",
      "owner_id": "johan_student_id",
      "title": "Qui est le meilleur acteur de 2011 ?",
      "updated_at": 2011-11-10T00:00:00.000Z,
    },
  ],
  "nextCursor": undefined,
}
`;

exports[`search for douglas' questions 1`] = `
{
  "data": [
    {
      "accepted_answer_id": null,
      "category_id": "cinema-category",
      "created_at": 2011-11-11T00:00:00.000Z,
      "id": "best-film-2011",
      "owner_id": "douglas_student_id",
      "title": "Quel est le meilleur film de 2011 ?",
      "updated_at": 2011-11-11T00:00:00.000Z,
    },
    {
      "accepted_answer_id": null,
      "category_id": "cinema-category",
      "created_at": 2011-11-10T00:00:00.000Z,
      "id": "popular-film-2011",
      "owner_id": "douglas_student_id",
      "title": "Quel est le film le plus populaire de 2011 ?",
      "updated_at": 2011-11-10T00:00:00.000Z,
    },
  ],
  "nextCursor": undefined,
}
`;

exports[`search for 'best actor' questions 1`] = `
{
  "data": [
    {
      "accepted_answer_id": null,
      "category_id": "cinema-category",
      "created_at": 2011-11-10T00:00:00.000Z,
      "id": "best-actor-2011",
      "owner_id": "johan_student_id",
      "title": "Qui est le meilleur acteur de 2011 ?",
      "updated_at": 2011-11-10T00:00:00.000Z,
    },
  ],
  "nextCursor": undefined,
}
`;
